--- a/buku-agenda-notebook.html
+++ b/buku-agenda-notebook.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/buku-agenda-notebook">
     <title>Cetak Buku Agenda Custom: Pilihan Notebook Kulit & Hardcover 2026 | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat cetak buku agenda custom dan notebook kantor. Tersedia jilid hardcover, spiral, bahan kulit (leather), serta blocknote seminar. Bisa cetak logo poli emas/perak.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Cetak Buku Agenda Custom: Pilihan Notebook Kulit & Hardcover 2026">
     <meta property="og:description"
         content="Temukan jenis buku agenda yang tepat untuk perusahaan Anda. Dari kesan klasik Agenda Kulit hingga praktisnya Blocknote Spiral.">
-    <meta property="og:image" content="assets/executive-leather.png">
+    <meta property="og:image" content="assets/executive-leather.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/buku-agenda-notebook">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Buku Agenda Custom: Media Branding Klasik yang Tak Lekang Waktu",
             "image": [
-                "https://hampersmalang.web.id/assets/executive-leather.png",
-                "https://hampersmalang.web.id/assets/seminar-basic.png"
+                "https://hampersmalang.web.id/assets/executive-leather.webp",
+                "https://hampersmalang.web.id/assets/seminar-basic.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -269,7 +269,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -315,7 +315,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/executive-leather.png" alt="Buku Agenda Kulit Eksklusif dengan Pulpen Metal"
+                        <img src="assets/executive-leather.webp" alt="Buku Agenda Kulit Eksklusif dengan Pulpen Metal"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Buku Agenda Kulit masih menjadi simbol profesionalisme di dalam ruang rapat tahun 2026.
@@ -416,7 +416,7 @@
 
                     <!-- Supporting Image -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/seminar-basic.png" alt="Contoh Blocknote Spiral Softcover"
+                        <img src="assets/seminar-basic.webp" alt="Contoh Blocknote Spiral Softcover"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Blocknote Spiral dengan Cover Full Color adalah favorit untuk seminar karena harga
@@ -518,7 +518,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/seminar-standard.png" alt="Promo Cetak Notebook"
+                                    <img src="assets/seminar-standard.webp" alt="Promo Cetak Notebook"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -550,7 +550,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -584,12 +584,12 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-seminar"><i
-                                            class="fa-solid fa-briefcase"></i> Blocknote Seminar</a></li>
+                                <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-briefcase"></i>
+                                        Blocknote Seminar</a></li>
                                 <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-crown"></i>
                                         Agenda Kulit VIP</a></li>
-                                <li class="cat-item"><a href="category-lifestyle"><i
-                                            class="fa-solid fa-pen-nib"></i> Pulpen Custom</a></li>
+                                <li class="cat-item"><a href="category-lifestyle"><i class="fa-solid fa-pen-nib"></i>
+                                        Pulpen Custom</a></li>
                             </ul>
                         </div>
 
@@ -599,7 +599,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/seminar-basic.png"
+                                <img src="assets/seminar-basic.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Paket Seminar Kit">
                                 <div>
@@ -617,7 +617,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/executive-hardbox.png"
+                                <img src="assets/executive-hardbox.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Souvenir Eksklusif">
                                 <div>
@@ -635,7 +635,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/seminar-premium.png"
+                                <img src="assets/seminar-premium.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Paket Seminar VIP">
                                 <div>
@@ -786,5 +786,3 @@
 </body>
 
 </html>
-
-
