--- a/category-drinkware.html
+++ b/category-drinkware.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/category-drinkware">
     <title>Souvenir Tumbler & Drinkware Custom Logo | Maroon Souvenir Surabaya</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat cetak souvenir tumbler custom: Vacuum Flask Stainless, Botol Sport BPA Free, Mug Keramik, dan Tumbler Kekinian. Harga grosir langsung pabrik untuk promosi perusahaan.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Tumbler & Drinkware Custom - Best Seller Corporate Gift">
     <meta property="og:description"
         content="Mulai dari Tumbler Stainless Tahan Panas hingga Mug Keramik. Solusi souvenir paling fungsional dan populer.">
-    <meta property="og:image" content="assets/cat-drinkware.png">
+    <meta property="og:image" content="assets/cat-drinkware.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/category-drinkware">
     <meta property="og:type" content="website">
 
@@ -33,7 +33,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -76,7 +76,7 @@
             </div>
             <div class="hero-image">
                 <div class="hero-bg-accent" style="transform: rotate(-3deg);"></div>
-                <img src="assets/cat-drinkware.png" alt="Drinkware Souvenir Collection"
+                <img src="assets/cat-drinkware.webp" alt="Drinkware Souvenir Collection"
                     style="transform: rotate(2deg);">
             </div>
         </div>
@@ -94,7 +94,7 @@
             <!-- Item 1: Vacuum Flask / Thermos -->
             <div class="grid md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div>
-                    <img src="assets/drinkware-thermos.png" alt="Vacuum Flask Thermos Custom"
+                    <img src="assets/drinkware-thermos.webp" alt="Vacuum Flask Thermos Custom"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -122,7 +122,7 @@
             <!-- Item 2: Sport Bottle (ZigZag) -->
             <div class="grid md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div class="md-order-2">
-                    <img src="assets/drinkware-sport.png" alt="Sport Bottle Aluminium & Plastik"
+                    <img src="assets/drinkware-sport.webp" alt="Sport Bottle Aluminium & Plastik"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -150,7 +150,7 @@
             <!-- Item 3: Mug & Cangkir -->
             <div class="grid md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div>
-                    <img src="assets/drinkware-mug.png" alt="Mug Keramik & Enamel Custom"
+                    <img src="assets/drinkware-mug.webp" alt="Mug Keramik & Enamel Custom"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -178,7 +178,7 @@
             <!-- Item 4: Corkcicle-Style (ZigZag) -->
             <div class="grid md-grid-cols-2 gap-8 items-center">
                 <div class="md-order-2">
-                    <img src="assets/drinkware-trendy.png" alt="Tumbler Kekinian Corkcicle Style"
+                    <img src="assets/drinkware-trendy.webp" alt="Tumbler Kekinian Corkcicle Style"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -222,28 +222,28 @@
                         "position": 1,
                         "name": "Vacuum Flask & Thermos",
                         "description": "Tumbler stainless tahan panas 12 jam dengan LED suhu.",
-                        "image": "https://hampersmalang.web.id/assets/drinkware-thermos.png"
+                        "image": "https://hampersmalang.web.id/assets/drinkware-thermos.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 2,
                         "name": "Sport Bottle",
                         "description": "Botol minum aluminium dan plastik BPA free.",
-                        "image": "https://hampersmalang.web.id/assets/drinkware-sport.png"
+                        "image": "https://hampersmalang.web.id/assets/drinkware-sport.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 3,
                         "name": "Mug & Cangkir",
                         "description": "Mug keramik decal dan enamel vintage custom.",
-                        "image": "https://hampersmalang.web.id/assets/drinkware-mug.png"
+                        "image": "https://hampersmalang.web.id/assets/drinkware-mug.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 4,
                         "name": "Trendy Tumbler",
                         "description": "Tumbler estetik model kekinian dengan sedotan.",
-                        "image": "https://hampersmalang.web.id/assets/drinkware-trendy.png"
+                        "image": "https://hampersmalang.web.id/assets/drinkware-trendy.webp"
                     }
                 ]
             }
@@ -397,7 +397,7 @@
                 <a href="category-seminar" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/seminar-kit.png" alt="Seminar Kit"
+                        <img src="assets/seminar-kit.webp" alt="Seminar Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
@@ -411,7 +411,7 @@
                 <a href="category-gadget" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-tech.png" alt="Gadget Souvenir"
+                        <img src="assets/cat-tech.webp" alt="Gadget Souvenir"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
@@ -425,7 +425,7 @@
                 <a href="category-executive" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-executive.png" alt="Executive Gift Set"
+                        <img src="assets/cat-executive.webp" alt="Executive Gift Set"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
