--- a/category-express.html
+++ b/category-express.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/category-express">
     <title>Souvenir Express Ready Stock & Cetak Kilat 24 Jam | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Layanan souvenir kantor express ready stock Surabaya. Cetak logo kilat 1x24 jam untuk kebutuhan mendesak. Tumbler, Flashdisk, & Notes ready gudang.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Express & Ready Stock - Solusi Deadline Mepet">
     <meta property="og:description"
         content="Butuh souvenir besok? Kami punya stok gudang yang siap cetak kilat. Solusi penyelamat nyawa untuk event mendadak Anda.">
-    <meta property="og:image" content="assets/hero-express.png">
+    <meta property="og:image" content="assets/hero-express.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/category-express">
     <meta property="og:type" content="website">
 
@@ -33,7 +33,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -79,7 +79,7 @@
             </div>
             <div class="hero-image">
                 <div class="hero-bg-accent" style="transform: rotate(3deg); background-color: #FEE2E2;"></div>
-                <img src="assets/hero-express.png" alt="Express Delivery Souvenir"
+                <img src="assets/hero-express.webp" alt="Express Delivery Souvenir"
                     style="transform: rotate(-2deg); border-radius: 20px; box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);">
             </div>
         </div>
@@ -97,7 +97,7 @@
             <!-- Item 1: Tumbler Ready Stock -->
             <div class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div>
-                    <img src="assets/express-tumbler.png" alt="Tumbler Ready Stock Surabaya"
+                    <img src="assets/express-tumbler.webp" alt="Tumbler Ready Stock Surabaya"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -127,7 +127,7 @@
             <!-- Item 2: Gadget Ready Stock (ZigZag) -->
             <div class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div class="md-order-2">
-                    <img src="assets/express-usb.png" alt="Flashdisk & Powerbank Ready"
+                    <img src="assets/express-usb.webp" alt="Flashdisk & Powerbank Ready"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -157,7 +157,7 @@
             <!-- Item 3: Notebook Ready Stock -->
             <div class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div>
-                    <img src="assets/express-notebook.png" alt="Notebook Polos Ready"
+                    <img src="assets/express-notebook.webp" alt="Notebook Polos Ready"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -188,7 +188,7 @@
             <!-- Item 4: Printing Process (Trust Builder) -->
             <div class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div class="md-order-2">
-                    <img src="assets/express-print.png" alt="Mesin Cetak UV Flatbed"
+                    <img src="assets/express-print.webp" alt="Mesin Cetak UV Flatbed"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -274,21 +274,21 @@
                         "position": 1,
                         "name": "Tumbler Ready Stock",
                         "description": "Tumbler stainless polos siap cetak UV/Grafir.",
-                        "image": "https://hampersmalang.web.id/assets/express-tumbler.png"
+                        "image": "https://hampersmalang.web.id/assets/express-tumbler.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 2,
                         "name": "Flashdisk Express",
                         "description": "USB Flashdisk kartu dan metal siap cetak kilat.",
-                        "image": "https://hampersmalang.web.id/assets/express-usb.png"
+                        "image": "https://hampersmalang.web.id/assets/express-usb.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 3,
                         "name": "Notebook Polos",
                         "description": "Buku agenda A5 polos ready stock siap hotprint.",
-                        "image": "https://hampersmalang.web.id/assets/express-notebook.png"
+                        "image": "https://hampersmalang.web.id/assets/express-notebook.webp"
                     }
                 ]
             }
@@ -378,7 +378,7 @@
                 <a href="category-seminar" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/seminar-kit.png" alt="Seminar Kit"
+                        <img src="assets/seminar-kit.webp" alt="Seminar Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
@@ -392,7 +392,7 @@
                 <a href="category-executive" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-executive.png" alt="Executive Gift Set"
+                        <img src="assets/cat-executive.webp" alt="Executive Gift Set"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
@@ -406,7 +406,7 @@
                 <a href="category-drinkware" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-drinkware.png" alt="Drinkware Tumbler"
+                        <img src="assets/cat-drinkware.webp" alt="Drinkware Tumbler"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
