--- a/category-gadget.html
+++ b/category-gadget.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/category-gadget">
     <title>Souvenir Gadget & Teknologi Custom Logo | Maroon Souvenir Surabaya</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
-        content="Pusat souvenir gadget custom: Powerbank UV Print, Flashdisk Kartu/Metal, Speaker Bluetooth, dan Desk Accessories. Cocok untuk startup, WFH kit, dan corporate gift kekinian.">
+        content="Vendor souvenir gadget custom: Powerbank UV Print, Flashdisk Kartu/Metal, Speaker Bluetooth, dan Desk Accessories. Cocok untuk startup, WFH kit, dan corporate gift kekinian.">
     <meta name="keywords"
         content="souvenir powerbank custom, flashdisk kartu promosi, bluetooth speaker logo perusahaan, souvenir gadget surabaya, tech merchandise corporate">
     <meta name="author" content="Maroon Souvenir">
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Gadget & Tech Custom - Pilihan Gen-Z & Startup">
     <meta property="og:description"
         content="Tingkatkan citra perusahaan dengan souvenir teknologi premium. Powerbank, Flashdisk, Speaker. Garansi kualitas.">
-    <meta property="og:image" content="assets/cat-tech.png">
+    <meta property="og:image" content="assets/cat-tech.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/category-gadget">
     <meta property="og:type" content="website">
 
@@ -33,7 +33,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -75,7 +75,7 @@
             </div>
             <div class="hero-image">
                 <div class="hero-bg-accent" style="transform: rotate(-3deg);"></div>
-                <img src="assets/cat-tech.png" alt="Gadget Souvenir Collection" style="transform: rotate(2deg);">
+                <img src="assets/cat-tech.webp" alt="Gadget Souvenir Collection" style="transform: rotate(2deg);">
             </div>
         </div>
     </header>
@@ -92,7 +92,7 @@
             <!-- Item 1: Powerbank -->
             <div class="grid md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div>
-                    <img src="assets/gadget-powerbank.png" alt="Powerbank Custom Logo"
+                    <img src="assets/gadget-powerbank.webp" alt="Powerbank Custom Logo"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -122,7 +122,7 @@
             <div class="grid md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <!-- Image FIRST in HTML for Mobile, pushed to order-2 on Desktop -->
                 <div class="md-order-2">
-                    <img src="assets/gadget-flashdisk.png" alt="Flashdisk Promosi Custom"
+                    <img src="assets/gadget-flashdisk.webp" alt="Flashdisk Promosi Custom"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -151,7 +151,7 @@
             <!-- Item 3: Speaker & TWS -->
             <div class="grid md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div>
-                    <img src="assets/gadget-speaker.png" alt="Bluetooth Speaker & TWS"
+                    <img src="assets/gadget-speaker.webp" alt="Bluetooth Speaker & TWS"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -179,7 +179,7 @@
             <!-- Item 4: Desk Accessories (ZigZag) -->
             <div class="grid md-grid-cols-2 gap-8 items-center">
                 <div class="md-order-2">
-                    <img src="assets/gadget-desk.png" alt="Desk Accessories Mousepad"
+                    <img src="assets/gadget-desk.webp" alt="Desk Accessories Mousepad"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -223,28 +223,28 @@
                         "position": 1,
                         "name": "Powerbank Custom Logo",
                         "description": "Powerbank 10000mAh dengan UV Print Full Color.",
-                        "image": "https://hampersmalang.web.id/assets/gadget-powerbank.png"
+                        "image": "https://hampersmalang.web.id/assets/gadget-powerbank.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 2,
                         "name": "Flashdisk Promosi",
                         "description": "Flashdisk Kartu, Metal, dan Kulit Custom.",
-                        "image": "https://hampersmalang.web.id/assets/gadget-flashdisk.png"
+                        "image": "https://hampersmalang.web.id/assets/gadget-flashdisk.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 3,
                         "name": "Bluetooth Speaker Premium",
                         "description": "Speaker portable dengan suara jernih dan branding elegan.",
-                        "image": "https://hampersmalang.web.id/assets/gadget-speaker.png"
+                        "image": "https://hampersmalang.web.id/assets/gadget-speaker.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 4,
                         "name": "Desk Accessories",
                         "description": "Mousepad gaming custom dan phone holder aluminium.",
-                        "image": "https://hampersmalang.web.id/assets/gadget-desk.png"
+                        "image": "https://hampersmalang.web.id/assets/gadget-desk.webp"
                     }
                 ]
             }
@@ -391,7 +391,7 @@
                 <a href="category-seminar" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/seminar-kit.png" alt="Seminar Kit"
+                        <img src="assets/seminar-kit.webp" alt="Seminar Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
@@ -405,7 +405,7 @@
                 <a href="category-drinkware" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-drinkware.png" alt="Drinkware Tumbler"
+                        <img src="assets/cat-drinkware.webp" alt="Drinkware Tumbler"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
@@ -419,7 +419,7 @@
                 <a href="category-executive" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-executive.png" alt="Executive Gift Set"
+                        <img src="assets/cat-executive.webp" alt="Executive Gift Set"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
