--- a/category-lifestyle.html
+++ b/category-lifestyle.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/category-lifestyle">
     <title>Souvenir Lifestyle & Apparel Custom Logo | Maroon Souvenir Surabaya</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Vendor souvenir kantor lifestyle & daily use custom: Tas Spunbond/Canvas, Payung Golf Promosi, Kaos Polo Bordir, dan Pouch Organizer. Iklan berjalan efektif untuk brand Anda.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Lifestyle & Apparel Custom - Iklan Berjalan Efektif">
     <meta property="og:description"
         content="Tingkatkan brand awareness dengan souvenir yang dipakai sehari-hari. Tas, Payung, Apparel, Pouch. Kualitas Premium.">
-    <meta property="og:image" content="assets/cat-lifestyle.png">
+    <meta property="og:image" content="assets/cat-lifestyle.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/category-lifestyle">
     <meta property="og:type" content="website">
 
@@ -33,7 +33,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -75,7 +75,7 @@
             </div>
             <div class="hero-image">
                 <div class="hero-bg-accent" style="transform: rotate(-3deg);"></div>
-                <img src="assets/cat-lifestyle.png" alt="Lifestyle Souvenir Collection"
+                <img src="assets/cat-lifestyle.webp" alt="Lifestyle Souvenir Collection"
                     style="transform: rotate(2deg);">
             </div>
         </div>
@@ -93,7 +93,7 @@
             <!-- Item 1: Bags & Totebag -->
             <div class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div>
-                    <img src="assets/lifestyle-bags.png" alt="Custom Totebag & Backpack"
+                    <img src="assets/lifestyle-bags.webp" alt="Custom Totebag & Backpack"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -122,7 +122,7 @@
             <!-- Item 2: Umbrellas (ZigZag) -->
             <div class="grid md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div class="md-order-2">
-                    <img src="assets/lifestyle-umbrella.png" alt="Payung Promosi Golf & Lipat"
+                    <img src="assets/lifestyle-umbrella.webp" alt="Payung Promosi Golf & Lipat"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -150,7 +150,7 @@
             <!-- Item 3: Apparel -->
             <div class="grid md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div>
-                    <img src="assets/lifestyle-apparel.png" alt="Kaos Polo, Jaket & Topi Custom"
+                    <img src="assets/lifestyle-apparel.webp" alt="Kaos Polo, Jaket & Topi Custom"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -181,7 +181,7 @@
             <!-- Item 4: Pouch & Clutch (ZigZag) -->
             <div class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center">
                 <div class="md-order-2">
-                    <img src="assets/lifestyle-pouch.png" alt="Pouch & Clutch Custom"
+                    <img src="assets/lifestyle-pouch.webp" alt="Pouch & Clutch Custom"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -225,28 +225,28 @@
                         "position": 1,
                         "name": "Bags & Totebag",
                         "description": "Tas Spunbond, Canvas Totebag, dan Backpack Laptop Custom.",
-                        "image": "https://hampersmalang.web.id/assets/lifestyle-bags.png"
+                        "image": "https://hampersmalang.web.id/assets/lifestyle-bags.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 2,
                         "name": "Payung Promosi",
                         "description": "Payung Golf dan Payung Lipat dengan Sablon Logo.",
-                        "image": "https://hampersmalang.web.id/assets/lifestyle-umbrella.png"
+                        "image": "https://hampersmalang.web.id/assets/lifestyle-umbrella.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 3,
                         "name": "Apparel & Seragam",
                         "description": "Kaos Polo Bordir, Jaket, dan Topi Custom.",
-                        "image": "https://hampersmalang.web.id/assets/lifestyle-apparel.png"
+                        "image": "https://hampersmalang.web.id/assets/lifestyle-apparel.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 4,
                         "name": "Pouch & Clutch",
                         "description": "Travel organizer dan clutch kulit custom emboss.",
-                        "image": "https://hampersmalang.web.id/assets/lifestyle-pouch.png"
+                        "image": "https://hampersmalang.web.id/assets/lifestyle-pouch.webp"
                     }
                 ]
             }
@@ -389,7 +389,7 @@
                 <a href="category-gadget" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-tech.png" alt="Gadget & Tech Souvenir"
+                        <img src="assets/cat-tech.webp" alt="Gadget & Tech Souvenir"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
@@ -403,7 +403,7 @@
                 <a href="category-drinkware" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-drinkware.png" alt="Drinkware Tumbler"
+                        <img src="assets/cat-drinkware.webp" alt="Drinkware Tumbler"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
@@ -417,7 +417,7 @@
                 <a href="category-eco" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-eco.png" alt="Eco Friendly Souvenir"
+                        <img src="assets/cat-eco.webp" alt="Eco Friendly Souvenir"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
