--- a/category-seminar.html
+++ b/category-seminar.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/category-seminar">
     <title>Paket Seminar Kit Kantor & Onboarding Welcome Kit | Maroon Souvenir Surabaya</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat cetak Seminar Kit Murah & Paket Training Kantor di Surabaya. Mulai Rp 15rb (Tas, Blocknote, Pulpen). Tersedia Onboarding Kit eksklusif untuk karyawan baru.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Paket Seminar Kit & Training - The Cash Cow Solution">
     <meta property="og:description"
         content="Solusi Paket Hemat untuk HRD & Event Organizer. Seminar Kit Basic hingga Onboarding Kit Premium. Pengerjaan Cepat.">
-    <meta property="og:image" content="assets/cat-seminar.png">
+    <meta property="og:image" content="assets/cat-seminar.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/category-seminar">
     <meta property="og:type" content="website">
 
@@ -33,7 +33,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -76,7 +76,7 @@
             </div>
             <div class="hero-image">
                 <div class="hero-bg-accent" style="transform: rotate(-3deg);"></div>
-                <img src="assets/cat-seminar.png" alt="Paket Seminar Kit Collection" style="transform: rotate(2deg);">
+                <img src="assets/cat-seminar.webp" alt="Paket Seminar Kit Collection" style="transform: rotate(2deg);">
             </div>
         </div>
     </header>
@@ -92,7 +92,7 @@
             <!-- Item 1: Paket Basic -->
             <div class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div>
-                    <img src="assets/seminar-basic.png" alt="Paket Seminar Kit Murah Basic"
+                    <img src="assets/seminar-basic.webp" alt="Paket Seminar Kit Murah Basic"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -122,7 +122,7 @@
             <!-- Item 2: Paket Standard (ZigZag) -->
             <div class="grid md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div class="md-order-2">
-                    <img src="assets/seminar-standard.png" alt="Paket Training Kit Standard"
+                    <img src="assets/seminar-standard.webp" alt="Paket Training Kit Standard"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -153,7 +153,7 @@
             <!-- Item 3: Paket Premium -->
             <div class="grid md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div>
-                    <img src="assets/seminar-premium.png" alt="VIP Seminar Kit Gift Set"
+                    <img src="assets/seminar-premium.webp" alt="VIP Seminar Kit Gift Set"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -186,7 +186,7 @@
             <!-- Item 4: Onboarding Kit (ZigZag) -->
             <div class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center">
                 <div class="md-order-2">
-                    <img src="assets/seminar-onboarding.png" alt="Onboarding Kit Karyawan Baru"
+                    <img src="assets/seminar-onboarding.webp" alt="Onboarding Kit Karyawan Baru"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -234,28 +234,28 @@
                         "position": 1,
                         "name": "Paket Basic",
                         "description": "Seminar kit murah meriah: Tas Spunbond + Blocknote + Pulpen.",
-                        "image": "https://hampersmalang.web.id/assets/seminar-basic.png"
+                        "image": "https://hampersmalang.web.id/assets/seminar-basic.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 2,
                         "name": "Paket Standard",
                         "description": "Training kit kantor: Tas Canvas + Tumbler + Notebook.",
-                        "image": "https://hampersmalang.web.id/assets/seminar-standard.png"
+                        "image": "https://hampersmalang.web.id/assets/seminar-standard.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 3,
                         "name": "Paket Premium VIP",
                         "description": "Gift set eksklusif Hardbox, Powerbank, Tumbler Stainless.",
-                        "image": "https://hampersmalang.web.id/assets/seminar-premium.png"
+                        "image": "https://hampersmalang.web.id/assets/seminar-premium.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 4,
                         "name": "Onboarding Kit",
                         "description": "Welcome pack karyawan baru: Hoodie, Laptop Sleeve, Box Custom.",
-                        "image": "https://hampersmalang.web.id/assets/seminar-onboarding.png"
+                        "image": "https://hampersmalang.web.id/assets/seminar-onboarding.webp"
                     }
                 ]
             }
@@ -402,7 +402,7 @@
                 <a href="category-drinkware" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-drinkware.png" alt="Drinkware Tumbler"
+                        <img src="assets/cat-drinkware.webp" alt="Drinkware Tumbler"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
@@ -416,7 +416,7 @@
                 <a href="category-gadget" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-tech.png" alt="Gadget Powerbank"
+                        <img src="assets/cat-tech.webp" alt="Gadget Powerbank"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
@@ -430,7 +430,7 @@
                 <a href="category-lifestyle" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-lifestyle.png" alt="Lifestyle Tas"
+                        <img src="assets/cat-lifestyle.webp" alt="Lifestyle Tas"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
