--- a/desk-accessories-custom.html
+++ b/desk-accessories-custom.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/desk-accessories-custom">
     <title>Desk Accessories Custom: Mousepad, Phone Holder & Humidifier | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat pembuatan desk accessories custom untuk souvenir kantor. Temukan mousepad besar (deskmat), phone holder kayu/metal, dan humidifier logo untuk branding meja kerja yang estetik.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Desk Accessories Custom: Bikin Meja Kerja Klien Lebih Estetik">
     <meta property="og:description"
         content="Meja kerja adalah 'real estate' branding paling mahal. Rebut area tersebut dengan Mousepad Gaming, Holder HP, dan Humidifier berlogo perusahaan Anda.">
-    <meta property="og:image" content="assets/gadget-desk.png">
+    <meta property="og:image" content="assets/gadget-desk.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/desk-accessories-custom">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Desk Accessories Custom: Strategi Branding di Meja Kerja Klien",
             "image": [
-                "https://hampersmalang.web.id/assets/gadget-desk.png",
-                "https://hampersmalang.web.id/assets/lifestyle-pouch.png"
+                "https://hampersmalang.web.id/assets/gadget-desk.webp",
+                "https://hampersmalang.web.id/assets/lifestyle-pouch.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -270,7 +270,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -316,7 +316,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/gadget-desk.png" alt="Setup Meja Kerja dengan Desk Accessories Custom"
+                        <img src="assets/gadget-desk.webp" alt="Setup Meja Kerja dengan Desk Accessories Custom"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Meja kerja yang rapi dan estetik meningkatkan produktivitas serta suasana hati karyawan.
@@ -394,7 +394,7 @@
 
                     <!-- Supporting Image 1 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/lifestyle-pouch.png" alt="Phone Holder dan Aksesoris Meja"
+                        <img src="assets/lifestyle-pouch.webp" alt="Phone Holder dan Aksesoris Meja"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Phone holder yang ringkas bisa disimpan dalam pouch organizer untuk mobilitas tinggi.
@@ -512,7 +512,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/gadget-desk.png" alt="Promo Desk Accessories"
+                                    <img src="assets/gadget-desk.webp" alt="Promo Desk Accessories"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -544,7 +544,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -580,8 +580,8 @@
                             <ul class="cat-list">
                                 <li class="cat-item"><a href="souvenir-gadget-elektronik"><i
                                             class="fa-solid fa-mobile-screen"></i> Gadget & Elektronik</a></li>
-                                <li class="cat-item"><a href="category-executive"><i
-                                            class="fa-solid fa-user-tie"></i> Executive Gifts</a></li>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-user-tie"></i>
+                                        Executive Gifts</a></li>
                                 <li class="cat-item"><a href="product-tumbler"><i class="fa-solid fa-mug-hot"></i>
                                         Tumbler Meja</a></li>
                             </ul>
@@ -593,7 +593,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/category-gadget.png"
+                                <img src="assets/category-gadget.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Gadget Pillar">
                                 <div>
@@ -611,7 +611,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/gadget-speaker.png"
+                                <img src="assets/gadget-speaker.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Speaker Bluetooth">
                                 <div>
@@ -629,7 +629,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/cat-executive.png"
+                                <img src="assets/cat-executive.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tren 2026">
                                 <div>
@@ -780,5 +780,3 @@
 </body>
 
 </html>
-
-
