--- a/etika-memberi-cinderamata-sidang-disertasi.html
+++ b/etika-memberi-cinderamata-sidang-disertasi.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/etika-memberi-cinderamata-sidang-disertasi">
     <title>Etika Memberi Cinderamata pada Sidang Terbuka / Tertutup Disertasi | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Panduan lengkap etika memberikan souvenir atau cinderamata kepada dewan penguji saat sidang disertasi. Tips budget, packaging hardbox sopan, dan waktu pemberian yang tepat.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Etika Memberi Cinderamata pada Sidang Disertasi: Jangan Salah Langkah">
     <meta property="og:description"
         content="Menghindari gratifikasi sambil tetap menunjukkan apresiasi. Simak panduan budget dan packaging yang tepat untuk momen doktoral Anda.">
-    <meta property="og:image" content="assets/etika-cinderamata-sidang.png">
+    <meta property="og:image" content="assets/etika-cinderamata-sidang.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/etika-memberi-cinderamata-sidang-disertasi">
     <meta property="og:type" content="article">
 
@@ -29,9 +29,9 @@
             "@type": "Article",
             "headline": "Etika Memberi Cinderamata pada Sidang Terbuka / Tertutup Disertasi",
             "image": [
-                "https://hampersmalang.web.id/assets/etika-cinderamata-sidang.png",
-                "https://hampersmalang.web.id/assets/hardbox-packaging-premium.png",
-                "https://hampersmalang.web.id/assets/gift-set-cum-laude.png"
+                "https://hampersmalang.web.id/assets/etika-cinderamata-sidang.webp",
+                "https://hampersmalang.web.id/assets/hardbox-packaging-premium.webp",
+                "https://hampersmalang.web.id/assets/gift-set-cum-laude.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -42,7 +42,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -268,7 +268,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -319,7 +319,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/etika-cinderamata-sidang.png" alt="Suasana Sidang Terbuka Disertasi Formal"
+                        <img src="assets/etika-cinderamata-sidang.webp" alt="Suasana Sidang Terbuka Disertasi Formal"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Dalam sidang akademik, setiap detail diperhatikan, termasuk bagaimana Anda mengemas tanda
@@ -385,7 +385,7 @@
                     </p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/hardbox-packaging-premium.png" alt="Packaging Hardbox Hitam Eksklusif"
+                        <img src="assets/hardbox-packaging-premium.webp" alt="Packaging Hardbox Hitam Eksklusif"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Hardbox tebal dengan pita satin menunjukkan keseriusan dan penghormatan Anda kepada
@@ -426,7 +426,7 @@
                             <li>Bonus: Welcome Card & Paperbag tebal.</li>
                         </ul>
                         <figure style="margin-bottom: 1.5rem;">
-                            <img src="assets/gift-set-cum-laude.png" alt="Paket Souvenir Cum Laude"
+                            <img src="assets/gift-set-cum-laude.webp" alt="Paket Souvenir Cum Laude"
                                 style="width: 100%; border-radius: 8px;">
                         </figure>
                         <a href="souvenir-promosi-doktor-guru-besar" class="btn"
@@ -512,7 +512,7 @@
                             <div
                                 style="background: white; border: 2px solid #b45309; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/etika-cinderamata-sidang.png" alt="Konsultasi Souvenir Sidang"
+                                    <img src="assets/etika-cinderamata-sidang.webp" alt="Konsultasi Souvenir Sidang"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(69, 26, 3, 0.9));">
@@ -543,7 +543,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -579,8 +579,8 @@
                             <ul class="cat-list">
                                 <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-gift"></i>
                                         Executive Sets</a></li>
-                                <li class="cat-item"><a href="buku-agenda-notebook"><i
-                                            class="fa-solid fa-book"></i> Hardcover Agenda</a></li>
+                                <li class="cat-item"><a href="buku-agenda-notebook"><i class="fa-solid fa-book"></i>
+                                        Hardcover Agenda</a></li>
                                 <li class="cat-item"><a href="souvenir-promosi-doktor-guru-besar"><i
                                             class="fa-solid fa-user-graduate"></i> Souvenir Doktor</a></li>
                             </ul>
@@ -592,7 +592,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/souvenir-promosi-doktor-cover.png"
+                                <img src="assets/souvenir-promosi-doktor-cover.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Ide Souvenir Doktor">
                                 <div>
@@ -610,7 +610,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/merchandise-kantor-eksklusif.png"
+                                <img src="assets/merchandise-kantor-eksklusif.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Cinderamata Eksklusif">
                                 <div>
@@ -627,7 +627,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/cetak-logo-custom-satuan-grosir.png"
+                                <img src="assets/cetak-logo-custom-satuan-grosir.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Teknis Grafir">
                                 <div>
@@ -777,5 +777,3 @@
 </body>
 
 </html>
-
-
