--- a/hampers-lebaran-perusahaan.html
+++ b/hampers-lebaran-perusahaan.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/hampers-lebaran-perusahaan">
     <title>Hampers Lebaran Perusahaan Eksklusif: Kirim Kehangatan & Jalin Silaturahmi | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Koleksi Hampers Lebaran untuk Perusahaan, Client, dan Karyawan. Paket kue kering premium, set cangkir, dan merchandise eksklusif dengan packaging mewah.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Hampers Lebaran Perusahaan: Simbol Apresiasi di Hari Kemenangan">
     <meta property="og:description"
         content="Temukan inspirasi hampers Idul Fitri yang elegan untuk mempererat hubungan bisnis dan kekeluargaan di momen spesial.">
-    <meta property="og:image" content="assets/hampers-lebaran-kantor.png">
+    <meta property="og:image" content="assets/hampers-lebaran-kantor.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/hampers-lebaran-perusahaan">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Hampers Lebaran Perusahaan: Kirim Kehangatan di Hari Kemenangan",
             "image": [
-                "https://hampersmalang.web.id/assets/hampers-lebaran-kantor.png",
-                "https://hampersmalang.web.id/assets/kartu-ucapan-lebaran-korporat.png"
+                "https://hampersmalang.web.id/assets/hampers-lebaran-kantor.webp",
+                "https://hampersmalang.web.id/assets/kartu-ucapan-lebaran-korporat.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -274,7 +274,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -325,7 +325,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/hampers-lebaran-kantor.png"
+                        <img src="assets/hampers-lebaran-kantor.webp"
                             alt="Hampers Lebaran Eksklusif Berisi Kue Kering dan Cangkir Keramik"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -402,7 +402,7 @@
                     </p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/drinkware-mug.png" alt="Set Cangkir Keramik"
+                        <img src="assets/drinkware-mug.webp" alt="Set Cangkir Keramik"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Hampers pecah belah memberikan kesan mewah dan timeless.
@@ -424,7 +424,7 @@
 
                     <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 1rem; margin: 2rem 0;">
                         <figure>
-                            <img src="assets/kartu-ucapan-lebaran-korporat.png" alt="Kartu Ucapan Lebaran Gold Foil"
+                            <img src="assets/kartu-ucapan-lebaran-korporat.webp" alt="Kartu Ucapan Lebaran Gold Foil"
                                 style="width: 100%; height: auto; border-radius: 8px;">
                             <figcaption
                                 style="text-align: center; color: #64748B; font-size: 0.8rem; margin-top: 0.5rem;">
@@ -432,7 +432,7 @@
                             </figcaption>
                         </figure>
                         <figure>
-                            <img src="assets/souvenir-tumbler-botol.png" onerror="this.src='assets/tumbler.png'"
+                            <img src="assets/souvenir-tumbler-botol.webp" onerror="this.src='assets/tumbler.webp'"
                                 alt="Tumbler hampers" style="width: 100%; height: auto; border-radius: 8px;">
                             <figcaption
                                 style="text-align: center; color: #64748B; font-size: 0.8rem; margin-top: 0.5rem;">
@@ -459,8 +459,8 @@
                         <h4 style="margin-top: 0; color: #064e3b; margin-bottom: 1rem;">Rencanakan Juga Souvenir Lainnya
                         </h4>
                         <ul style="margin-bottom: 0;">
-                            <li><a href="onboarding-kit-karyawan"
-                                    style="color: #059669; font-weight: 600;">Onboarding Kit Karyawan Baru</a></li>
+                            <li><a href="onboarding-kit-karyawan" style="color: #059669; font-weight: 600;">Onboarding
+                                    Kit Karyawan Baru</a></li>
                             <li><a href="souvenir-akhir-tahun-kalender"
                                     style="color: #059669; font-weight: 600;">Souvenir Kalender Akhir Tahun</a></li>
                             <li><a href="souvenir-rups-saham" style="color: #059669; font-weight: 600;">Souvenir
@@ -546,7 +546,7 @@
                             <div
                                 style="background: white; border: 2px solid #059669; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/hampers-lebaran-kantor.png" alt="Pesan Hampers Lebaran"
+                                    <img src="assets/hampers-lebaran-kantor.webp" alt="Pesan Hampers Lebaran"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(6, 78, 59, 0.9));">
@@ -577,7 +577,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -612,10 +612,10 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Pilihan Isi Hampers</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-drinkware"><i
-                                            class="fa-solid fa-mug-hot"></i> Set Cangkir & Tumbler</a></li>
-                                <li class="cat-item"><a href="category-executive"><i
-                                            class="fa-solid fa-box-open"></i> Premium Hardbox</a></li>
+                                <li class="cat-item"><a href="category-drinkware"><i class="fa-solid fa-mug-hot"></i>
+                                        Set Cangkir & Tumbler</a></li>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-box-open"></i>
+                                        Premium Hardbox</a></li>
                                 <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i>
                                         Hampers Eco-Friendly</a></li>
                             </ul>
@@ -627,7 +627,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/katalog-event-perusahaan.png"
+                                <img src="assets/katalog-event-perusahaan.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Event Guide">
                                 <div>
@@ -644,8 +644,8 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/souvenir-kalender-agenda-tahun-baru.png"
-                                    onerror="this.src='assets/buku-agenda-kerja.png'"
+                                <img src="assets/souvenir-kalender-agenda-tahun-baru.webp"
+                                    onerror="this.src='assets/buku-agenda-kerja.webp'"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Kalender">
                                 <div>
@@ -662,7 +662,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/onboarding-kit-karyawan.png"
+                                <img src="assets/onboarding-kit-karyawan.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Onboarding">
                                 <div>
@@ -812,5 +812,3 @@
 </body>
 
 </html>
-
-
