--- a/botol-minum-aluminium.html
+++ b/botol-minum-aluminium.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/botol-minum-aluminium">
     <title>Botol Minum Aluminium Custom: Souvenir Sporty & Awet (Grosir) | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat cetak botol minum aluminium custom logo untuk souvenir olahraga, komunitas sepeda, dan promosi outdoor. Ringan, anti-pecah, dan full color printing. Harga grosir.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Botol Minum Aluminium Custom: Souvenir Sporty & Awet (Grosir)">
     <meta property="og:description"
         content="Cari souvenir yang tangguh untuk event outdoor? Botol Aluminium adalah jawabannya. Ringan, anti-karat, dan bisa dibranding dengan logo full color.">
-    <meta property="og:image" content="assets/drinkware-sport.png">
+    <meta property="og:image" content="assets/drinkware-sport.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/botol-minum-aluminium">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Botol Minum Aluminium Custom: Pilihan Souvenir Sporty Paling Tangguh",
             "image": [
-                "https://hampersmalang.web.id/assets/drinkware-sport.png",
-                "https://hampersmalang.web.id/assets/express-tumbler.png"
+                "https://hampersmalang.web.id/assets/drinkware-sport.webp",
+                "https://hampersmalang.web.id/assets/express-tumbler.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -269,7 +269,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -315,7 +315,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/drinkware-sport.png" alt="Botol Minum Aluminium Sporty Custom"
+                        <img src="assets/drinkware-sport.webp" alt="Botol Minum Aluminium Sporty Custom"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Botol Aluminium Sport dengan Carabiner, pilihan utama komunitas outdoor. (Sumber: Maroon
@@ -424,7 +424,7 @@
 
                     <!-- Supporting Image 2 -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/cat-drinkware.png" alt="Berbagai Varian Warna Botol Aluminium"
+                        <img src="assets/cat-drinkware.webp" alt="Berbagai Varian Warna Botol Aluminium"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Tersedia dalam berbagai warna mencolok (Spot Color) yang menarik perhatian.
@@ -546,7 +546,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/drinkware-sport.png" alt="Promo Botol Aluminium"
+                                    <img src="assets/drinkware-sport.webp" alt="Promo Botol Aluminium"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -578,7 +578,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -625,7 +625,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/drinkware-thermos.png"
+                                <img src="assets/drinkware-thermos.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tumbler Thermos">
                                 <div>
@@ -643,7 +643,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/express-tumbler.png"
+                                <img src="assets/express-tumbler.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Tumbler Plastik">
                                 <div>
@@ -661,7 +661,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/cat-executive.png"
+                                <img src="assets/cat-executive.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Gift Set">
                                 <div>
@@ -812,5 +812,3 @@
 </body>
 
 </html>
-
-
