--- a/buku-daur-ulang.html
+++ b/buku-daur-ulang.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/buku-daur-ulang">
     <title>Buku Daur Ulang & Eco Pen: Souvenir Seminar Kit Ramah Lingkungan | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Cetak Buku Notebook Daur Ulang (Recycled Paper) dan Pulpen Kertas Ramah Lingkungan di Surabaya. Souvenir unik untuk seminar eco-green dan kampanye ESG perusahaan.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Buku Daur Ulang & Eco Pen: Tulis Cerita Hijau Perusahaan Anda">
     <meta property="og:description"
         content="Tinggalkan kertas putih pemutih. Beralihlah ke Notebook Daur Ulang yang estetik dan etis. Dilengkapi Pulpen Kertas biodegradable.">
-    <meta property="og:image" content="assets/eco-notebook.png">
+    <meta property="og:image" content="assets/eco-notebook.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/buku-daur-ulang">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "Buku Daur Ulang & Pulpen Kertas: Souvenir Seminar Paling Etis",
             "image": [
-                "https://hampersmalang.web.id/assets/eco-notebook.png",
-                "https://hampersmalang.web.id/assets/souvenir-ramah-lingkungan.png"
+                "https://hampersmalang.web.id/assets/eco-notebook.webp",
+                "https://hampersmalang.web.id/assets/souvenir-ramah-lingkungan.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -274,7 +274,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -322,7 +322,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/eco-notebook.png"
+                        <img src="assets/eco-notebook.webp"
                             alt="Set Notebook Daur Ulang Warna Coklat Kraft dengan Pulpen Kertas"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -425,7 +425,7 @@
                     </p>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/souvenir-ramah-lingkungan.png" alt="Setup Meja Kerja Eco Friendly"
+                        <img src="assets/souvenir-ramah-lingkungan.webp" alt="Setup Meja Kerja Eco Friendly"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Notebook daur ulang sangat serasi dipadukan dengan Tumbler Bambu dan pouch kanvas.
@@ -517,7 +517,7 @@
                             <div
                                 style="background: white; border: 2px solid #D97706; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/eco-notebook.png" alt="Promo Notebook Seminar"
+                                    <img src="assets/eco-notebook.webp" alt="Promo Notebook Seminar"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(146, 64, 14, 0.8));">
@@ -548,7 +548,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -586,8 +586,8 @@
                                         Seminar Kit</a></li>
                                 <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-leaf"></i> Eco
                                         Friendly</a></li>
-                                <li class="cat-item"><a href="category-executive"><i
-                                            class="fa-solid fa-briefcase"></i> Office Supply</a></li>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-briefcase"></i>
+                                        Office Supply</a></li>
                             </ul>
                         </div>
 
@@ -597,7 +597,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/souvenir-ramah-lingkungan.png"
+                                <img src="assets/souvenir-ramah-lingkungan.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Sustainable Gifts">
                                 <div>
@@ -615,7 +615,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/seminar-basic.png"
+                                <img src="assets/seminar-basic.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Seminar Kit">
                                 <div>
@@ -632,7 +632,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/gadget-desk.png"
+                                <img src="assets/gadget-desk.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Meja Kerja">
                                 <div>
@@ -782,5 +782,3 @@
 </body>
 
 </html>
-
-
