--- a/category-eco.html
+++ b/category-eco.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/category-eco">
     <title>Souvenir Eco-Green Sustainable Custom Logo | Maroon Souvenir Surabaya</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat souvenir ramah lingkungan (ESG Compliant): Bamboo Tumbler, Recycled Notebook, Tas Goni, dan Wooden Desk Set. Solusi Corporate Gift sustainable untuk perusahaan modern.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Souvenir Eco-Green & Sustainable - The Pioneer Move">
     <meta property="og:description"
         content="Tunjukkan komitmen ESG perusahaan Anda dengan souvenir ramah lingkungan. Bamboo, Recycled Paper, Jute. Premium & Meaningful.">
-    <meta property="og:image" content="assets/cat-eco.png">
+    <meta property="og:image" content="assets/cat-eco.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/category-eco">
     <meta property="og:type" content="website">
 
@@ -33,7 +33,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -76,7 +76,7 @@
             </div>
             <div class="hero-image">
                 <div class="hero-bg-accent" style="transform: rotate(-3deg); background-color: #D1FAE5;"></div>
-                <img src="assets/cat-eco.png" alt="Eco Green Souvenir Collection" style="transform: rotate(2deg);">
+                <img src="assets/cat-eco.webp" alt="Eco Green Souvenir Collection" style="transform: rotate(2deg);">
             </div>
         </div>
     </header>
@@ -93,7 +93,7 @@
             <!-- Item 1: Bamboo Tumbler & Cutlery -->
             <div class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div>
-                    <img src="assets/eco-bamboo.png" alt="Bamboo Tumbler & Cutlery Set"
+                    <img src="assets/eco-bamboo.webp" alt="Bamboo Tumbler & Cutlery Set"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -123,7 +123,7 @@
             <!-- Item 2: Recycled Notebook (ZigZag) -->
             <div class="grid md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div class="md-order-2">
-                    <img src="assets/eco-notebook.png" alt="Recycled Paper Notebook"
+                    <img src="assets/eco-notebook.webp" alt="Recycled Paper Notebook"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -152,7 +152,7 @@
             <!-- Item 3: Tas Spunbond / Karung Goni -->
             <div class="grid md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div>
-                    <img src="assets/eco-bag.png" alt="Tas Goni Jute & Spunbond Eco Bag"
+                    <img src="assets/eco-bag.webp" alt="Tas Goni Jute & Spunbond Eco Bag"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -181,7 +181,7 @@
             <!-- Item 4: Wooden Desk Set (ZigZag) -->
             <div class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center">
                 <div class="md-order-2">
-                    <img src="assets/eco-deskset.png" alt="Wooden Desk Organizer"
+                    <img src="assets/eco-deskset.webp" alt="Wooden Desk Organizer"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -226,28 +226,28 @@
                         "position": 1,
                         "name": "Bamboo Tumbler & Cutlery",
                         "description": "Tumbler bambu stainless 304 dan alat makan travel.",
-                        "image": "https://hampersmalang.web.id/assets/eco-bamboo.png"
+                        "image": "https://hampersmalang.web.id/assets/eco-bamboo.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 2,
                         "name": "Recycled Notebook",
                         "description": "Buku catatan kertas daur ulang dengan pulpen eco.",
-                        "image": "https://hampersmalang.web.id/assets/eco-notebook.png"
+                        "image": "https://hampersmalang.web.id/assets/eco-notebook.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 3,
                         "name": "Tas Goni Eco Bag",
                         "description": "Goodie bag bahan goni dan spunbond ramah lingkungan.",
-                        "image": "https://hampersmalang.web.id/assets/eco-bag.png"
+                        "image": "https://hampersmalang.web.id/assets/eco-bag.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 4,
                         "name": "Wooden Desk Set",
                         "description": "Organizer meja kerja bahan kayu premium.",
-                        "image": "https://hampersmalang.web.id/assets/eco-deskset.png"
+                        "image": "https://hampersmalang.web.id/assets/eco-deskset.webp"
                     }
                 ]
             }
@@ -390,7 +390,7 @@
                 <a href="category-drinkware" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-drinkware.png" alt="Drinkware Tumbler"
+                        <img src="assets/cat-drinkware.webp" alt="Drinkware Tumbler"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
@@ -404,7 +404,7 @@
                 <a href="category-lifestyle" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-lifestyle.png" alt="Lifestyle Souvenir"
+                        <img src="assets/cat-lifestyle.webp" alt="Lifestyle Souvenir"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
@@ -418,7 +418,7 @@
                 <a href="category-seminar" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/seminar-kit.png" alt="Seminar Kit"
+                        <img src="assets/seminar-kit.webp" alt="Seminar Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
