--- a/category-executive.html
+++ b/category-executive.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/category-executive">
     <title>Souvenir Eksklusif VIP & Executive Gift Set | Maroon Souvenir Surabaya</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat souvenir eksklusif untuk direksi, investor, dan klien VVIP. Leather Gift Set, Premium Hardbox, Signature Pen, dan Card Holder kulit. Solusi corporate gift mewah Surabaya.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Executive & VIP Gift Set - Hadiah Berkelas untuk Klien Prioritas">
     <meta property="og:description"
         content="Solusi bingung cari kado untuk Bos/Direksi. Leather Gift Set, Hardbox Premium, dan Signature Pen dengan inisial nama. Mewah & Eksklusif.">
-    <meta property="og:image" content="assets/cat-executive.png">
+    <meta property="og:image" content="assets/cat-executive.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/category-executive">
     <meta property="og:type" content="website">
 
@@ -33,7 +33,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -79,7 +79,7 @@
             </div>
             <div class="hero-image">
                 <div class="hero-bg-accent" style="transform: rotate(-3deg); background-color: #E0E7FF;"></div>
-                <img src="assets/cat-executive.png" alt="Executive Souvenir Collection"
+                <img src="assets/cat-executive.webp" alt="Executive Souvenir Collection"
                     style="transform: rotate(2deg);">
             </div>
         </div>
@@ -97,7 +97,7 @@
             <!-- Item 1: Leather Gift Set -->
             <div class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div>
-                    <img src="assets/executive-leather.png" alt="Leather Agenda & Pen Gift Set"
+                    <img src="assets/executive-leather.webp" alt="Leather Agenda & Pen Gift Set"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -128,7 +128,7 @@
             <!-- Item 2: Premium Hardbox (ZigZag) -->
             <div class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div class="md-order-2">
-                    <img src="assets/executive-hardbox.png" alt="Premium Hardbox Packaging"
+                    <img src="assets/executive-hardbox.webp" alt="Premium Hardbox Packaging"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -157,7 +157,7 @@
             <!-- Item 3: Name Card & Wallet -->
             <div class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center" style="margin-bottom: 6rem;">
                 <div>
-                    <img src="assets/executive-wallet.png" alt="Leather Wallet & Card Holder"
+                    <img src="assets/executive-wallet.webp" alt="Leather Wallet & Card Holder"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -187,7 +187,7 @@
             <!-- Item 4: Signature Pen (ZigZag) -->
             <div class="grid grid-cols-1 md-grid-cols-2 gap-8 items-center">
                 <div class="md-order-2">
-                    <img src="assets/executive-pen.png" alt="Signature Metal Pen"
+                    <img src="assets/executive-pen.webp" alt="Signature Metal Pen"
                         style="width: 100%; border-radius: var(--radius-lg); box-shadow: var(--shadow-card);"
                         loading="lazy" width="600" height="400">
                 </div>
@@ -233,28 +233,28 @@
                         "position": 1,
                         "name": "Leather Gift Set",
                         "description": "Agenda kulit dan pen metal dalam box eksklusif.",
-                        "image": "https://hampersmalang.web.id/assets/executive-leather.png"
+                        "image": "https://hampersmalang.web.id/assets/executive-leather.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 2,
                         "name": "Premium Hardbox",
                         "description": "Packaging hardbox custom dengan poli emas.",
-                        "image": "https://hampersmalang.web.id/assets/executive-hardbox.png"
+                        "image": "https://hampersmalang.web.id/assets/executive-hardbox.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 3,
                         "name": "Wallet & Card Holder",
                         "description": "Dompet kulit dan tempat kartu nama custom nama.",
-                        "image": "https://hampersmalang.web.id/assets/executive-wallet.png"
+                        "image": "https://hampersmalang.web.id/assets/executive-wallet.webp"
                     },
                     {
                         "@type": "ListItem",
                         "position": 4,
                         "name": "Signature Pen",
                         "description": "Pulpen metal premium style parker dengan grafir nama.",
-                        "image": "https://hampersmalang.web.id/assets/executive-pen.png"
+                        "image": "https://hampersmalang.web.id/assets/executive-pen.webp"
                     }
                 ]
             }
@@ -339,7 +339,7 @@
                 <a href="category-seminar" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/seminar-kit.png" alt="Seminar Kit"
+                        <img src="assets/seminar-kit.webp" alt="Seminar Kit"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
@@ -353,7 +353,7 @@
                 <a href="category-drinkware" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-drinkware.png" alt="Drinkware Tumbler"
+                        <img src="assets/cat-drinkware.webp" alt="Drinkware Tumbler"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
@@ -367,7 +367,7 @@
                 <a href="category-eco" class="card hover-zoom"
                     style="padding: 0; border: none; overflow: hidden; height: 250px; display: block; text-decoration: none;">
                     <div style="height: 100%; position: relative;">
-                        <img src="assets/cat-eco.png" alt="Eco Green Souvenir"
+                        <img src="assets/cat-eco.webp" alt="Eco Green Souvenir"
                             style="width: 100%; height: 100%; object-fit: cover;">
                         <div class="gallery-overlay"
                             style="bottom: 0; background: linear-gradient(to top, rgba(0,0,0,0.8), transparent);">
