--- a/cetak-logo-custom-satuan-grosir.html
+++ b/cetak-logo-custom-satuan-grosir.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/cetak-logo-custom-satuan-grosir">
     <title>Jasa Cetak Logo Custom Satuan & Grosir Merchandise | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Layanan cetak logo custom untuk merchandise satuan dan grosir. Tersedia UV Flatbed Printing, Laser Engraving, dan Sablon Manual. Hasil presisi dan awet.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Cetak Logo Custom: Teknologi Terbaik untuk Branding Anda">
     <meta property="og:description"
         content="Pahami perbedaan UV Print, Laser Grafir, dan Sablon Manual untuk hasil maksimal.">
-    <meta property="og:image" content="assets/cetak-logo-custom-satuan-grosir.png">
+    <meta property="og:image" content="assets/cetak-logo-custom-satuan-grosir.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/cetak-logo-custom-satuan-grosir">
     <meta property="og:type" content="article">
 
@@ -29,9 +29,9 @@
             "@type": "Article",
             "headline": "Panduan Cetak Logo Custom Satuan & Grosir untuk Merchandise",
             "image": [
-                "https://hampersmalang.web.id/assets/cetak-logo-custom-satuan-grosir.png",
-                "https://hampersmalang.web.id/assets/laser-grafir-metal.png",
-                "https://hampersmalang.web.id/assets/sablon-manual-grosir.png"
+                "https://hampersmalang.web.id/assets/cetak-logo-custom-satuan-grosir.webp",
+                "https://hampersmalang.web.id/assets/laser-grafir-metal.webp",
+                "https://hampersmalang.web.id/assets/sablon-manual-grosir.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -42,7 +42,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-02",
@@ -275,7 +275,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -302,8 +302,7 @@
                 <span style="margin: 0 0.5rem;">/</span>
                 <a href="blog" style="text-decoration: none; color: #64748B;">Blog</a>
                 <span style="margin: 0 0.5rem;">/</span>
-                <a href="merchandise-perusahaan-bisnis"
-                    style="text-decoration: none; color: #64748B;">Corporate</a>
+                <a href="merchandise-perusahaan-bisnis" style="text-decoration: none; color: #64748B;">Corporate</a>
                 <span style="margin: 0 0.5rem;">/</span>
                 <span style="color: #2563eb; font-weight: 700;">Teknik Cetak</span>
             </nav>
@@ -326,7 +325,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/cetak-logo-custom-satuan-grosir.png"
+                        <img src="assets/cetak-logo-custom-satuan-grosir.webp"
                             alt="Mesin UV Print Modern untuk Merchandise Custom"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
@@ -383,7 +382,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/laser-grafir-metal.png" alt="Proses Laser Engraving pada Pulpen Metal"
+                        <img src="assets/laser-grafir-metal.webp" alt="Proses Laser Engraving pada Pulpen Metal"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Kepresisian laser mampu mencetak huruf super kecil dengan sangat tajam.
@@ -419,7 +418,7 @@
                     </ul>
 
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/sablon-manual-grosir.png" alt="Workshop Sablon Manual untuk Tas Kain"
+                        <img src="assets/sablon-manual-grosir.webp" alt="Workshop Sablon Manual untuk Tas Kain"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             Untuk order di atas 100 pcs, sablon manual adalah pilihan paling ekonomis.
@@ -554,7 +553,7 @@
                             <div
                                 style="background: white; border: 2px solid #2563eb; border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/cetak-logo-custom-satuan-grosir.png" alt="Mesin Cetak Custom"
+                                    <img src="assets/cetak-logo-custom-satuan-grosir.webp" alt="Mesin Cetak Custom"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(30, 64, 175, 0.9));">
@@ -585,7 +584,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -622,10 +621,10 @@
                             <ul class="cat-list">
                                 <li class="cat-item"><a href="category-drinkware"><i
                                             class="fa-solid fa-wine-bottle"></i> Laser di Tumbler</a></li>
-                                <li class="cat-item"><a href="pulpen-promosi-custom"><i
-                                            class="fa-solid fa-pen"></i> Pad Print Pulpen</a></li>
-                                <li class="cat-item"><a href="buku-agenda-notebook"><i
-                                            class="fa-solid fa-book"></i> Emboss di Kulit</a></li>
+                                <li class="cat-item"><a href="pulpen-promosi-custom"><i class="fa-solid fa-pen"></i> Pad
+                                        Print Pulpen</a></li>
+                                <li class="cat-item"><a href="buku-agenda-notebook"><i class="fa-solid fa-book"></i>
+                                        Emboss di Kulit</a></li>
                                 <li class="cat-item"><a href="category-eco"><i class="fa-solid fa-shirt"></i>
                                         Sablon Kain</a></li>
                             </ul>
@@ -637,7 +636,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/merchandise-perusahaan-bisnis.png"
+                                <img src="assets/merchandise-perusahaan-bisnis.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Merchandise Bisnis">
                                 <div>
@@ -655,7 +654,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/merchandise-promosi-branding.png"
+                                <img src="assets/merchandise-promosi-branding.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Souvenir Murah">
                                 <div>
@@ -672,7 +671,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/merchandise-kantor-eksklusif.png"
+                                <img src="assets/merchandise-kantor-eksklusif.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Souvenir Premium">
                                 <div>
@@ -822,5 +821,3 @@
 </body>
 
 </html>
-
-
