--- a/id-card-lanyard.html
+++ b/id-card-lanyard.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/id-card-lanyard">
     <title>Cetak ID Card & Tali Lanyard Custom: Identitas Event Profesional | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Pusat cetak Tali Lanyard Custom (Tissue/Polyester) dan ID Card Holder PVC. Kualitas cetak anti-luntur untuk panitia seminar, kartu anggota, dan id card karyawan.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Cetak ID Card & Tali Lanyard Custom: Identitas Event Profesional">
     <meta property="og:description"
         content="Lanyard bukan sekadar gantungan, tapi simbol identitas. Temukan perbedaan bahan Lanyard Tissue vs Polyester dan cara memilih ID Card Holder yang awet.">
-    <meta property="og:image" content="assets/seminar-basic.png">
+    <meta property="og:image" content="assets/seminar-basic.webp">
     <meta property="og:url" content="https://hampersmalang.web.id/id-card-lanyard">
     <meta property="og:type" content="article">
 
@@ -29,8 +29,8 @@
             "@type": "Article",
             "headline": "ID Card & Lanyard Custom: Elemen Wajib Profesionalisme Event",
             "image": [
-                "https://hampersmalang.web.id/assets/seminar-basic.png",
-                "https://hampersmalang.web.id/assets/seminar-onboarding.png"
+                "https://hampersmalang.web.id/assets/seminar-basic.webp",
+                "https://hampersmalang.web.id/assets/seminar-onboarding.webp"
             ],
             "author": {
                 "@type": "Organization",
@@ -41,7 +41,7 @@
                 "name": "Maroon Souvenir",
                 "logo": {
                     "@type": "ImageObject",
-                    "url": "https://hampersmalang.web.id/assets/logo.png"
+                    "url": "https://hampersmalang.web.id/assets/logo.webp"
                 }
             },
             "datePublished": "2026-02-01",
@@ -270,7 +270,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -316,7 +316,7 @@
 
                     <!-- Main Image -->
                     <figure style="margin-bottom: 2rem;">
-                        <img src="assets/seminar-basic.png" alt="Tali Lanyard Printing dan Nametag ID Card"
+                        <img src="assets/seminar-basic.webp" alt="Tali Lanyard Printing dan Nametag ID Card"
                             style="width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1);">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.75rem;">
                             Tali ID Card atau Lanyard kini menjadi bagian dari fasyen kantor dan identitas visual sebuah
@@ -430,7 +430,7 @@
 
                     <!-- Supporting Image -->
                     <figure style="margin: 2rem 0;">
-                        <img src="assets/seminar-onboarding.png" alt="ID Card Holder dalam Onboarding Kit"
+                        <img src="assets/seminar-onboarding.webp" alt="ID Card Holder dalam Onboarding Kit"
                             style="width: 100%; height: auto; border-radius: 8px;">
                         <figcaption style="text-align: center; color: #64748B; font-size: 0.9rem; margin-top: 0.5rem;">
                             ID Card Holder kulit sering disertakan dalam paket Onboarding Kit untuk karyawan baru
@@ -540,7 +540,7 @@
                             <div
                                 style="background: white; border: 2px solid var(--accent); border-radius: 12px; overflow: hidden; box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.1); max-width: 600px; margin: 0 auto; transition: transform 0.3s ease;">
                                 <div style="position: relative;">
-                                    <img src="assets/seminar-basic.png" alt="Promo Cetak Lanyard"
+                                    <img src="assets/seminar-basic.webp" alt="Promo Cetak Lanyard"
                                         style="width: 100%; height: auto; display: block; object-fit: cover;">
                                     <div
                                         style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; background: linear-gradient(to bottom, transparent 60%, rgba(0,0,0,0.6));">
@@ -552,7 +552,8 @@
                                         style="color: white; font-size: 1.25rem; margin-bottom: 0.5rem; font-weight: 800;">
                                         <i class="fa-brands fa-whatsapp"></i> ORDER LANYARD KILAT
                                     </h3>
-                                    <p style="margin:0; font-size: 0.95rem; opacity: 0.9;">Bisa Ditunggu (S&K Berlaku) â€¢
+                                    <p style="margin:0; font-size: 0.95rem; opacity: 0.9;">Bisa Ditunggu (S&K Berlaku)
+                                        â€¢
                                         Kualitas HD Printing</p>
                                 </div>
                             </div>
@@ -572,7 +573,7 @@
 
                     <!-- Author Bio -->
                     <div class="author-box">
-                        <img src="assets/logo.png" alt="Maroon Souvenir Team"
+                        <img src="assets/logo.webp" alt="Maroon Souvenir Team"
                             style="width: 80px; height: 80px; border-radius: 50%; object-fit: contain; background: white; border: 1px solid #e2e8f0; padding: 5px;">
                         <div>
                             <h4 style="margin-bottom: 0.5rem; font-size: 1.1rem; color: #1e293b;">Ditulis oleh Tim
@@ -606,12 +607,12 @@
                         <div class="widget-card">
                             <h3 class="widget-title">Kategori Terkait</h3>
                             <ul class="cat-list">
-                                <li class="cat-item"><a href="category-seminar"><i
-                                            class="fa-solid fa-briefcase"></i> Paket Seminar Kit</a></li>
-                                <li class="cat-item"><a href="category-executive"><i
-                                            class="fa-solid fa-user-tie"></i> Souvenir Kantor</a></li>
-                                <li class="cat-item"><a href="pulpen-promosi-custom"><i
-                                            class="fa-solid fa-pen"></i> Pulpen Promosi</a></li>
+                                <li class="cat-item"><a href="category-seminar"><i class="fa-solid fa-briefcase"></i>
+                                        Paket Seminar Kit</a></li>
+                                <li class="cat-item"><a href="category-executive"><i class="fa-solid fa-user-tie"></i>
+                                        Souvenir Kantor</a></li>
+                                <li class="cat-item"><a href="pulpen-promosi-custom"><i class="fa-solid fa-pen"></i>
+                                        Pulpen Promosi</a></li>
                             </ul>
                         </div>
 
@@ -621,7 +622,7 @@
 
                             <!-- Item 1 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/seminar-basic.png"
+                                <img src="assets/seminar-basic.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Paket Seminar Basic">
                                 <div>
@@ -639,7 +640,7 @@
 
                             <!-- Item 2 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 1.5rem; align-items: start;">
-                                <img src="assets/hero-packages.png"
+                                <img src="assets/hero-packages.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Panduan Seminar">
                                 <div>
@@ -657,7 +658,7 @@
 
                             <!-- Item 3 -->
                             <div style="display: flex; gap: 1rem; margin-bottom: 0; align-items: start;">
-                                <img src="assets/seminar-basic.png"
+                                <img src="assets/seminar-basic.webp"
                                     style="width: 70px; height: 70px; object-fit: cover; border-radius: 8px; flex-shrink: 0;"
                                     alt="Pulpen Custom">
                                 <div>
@@ -808,5 +809,3 @@
 </body>
 
 </html>
-
-
