--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="canonical" href="https://hampersmalang.web.id/">
     <title>Vendor Hampers Malang - Parcel & Gift Set Premium Custom | Maroon Souvenir</title>
-    <link rel="icon" type="image/png" href="assets/logo.png">
+    <link rel="icon" type="image/png" href="assets/logo.webp">
     <meta name="description"
         content="Vendor Hampers Malang Terpercaya. Jual parcel lebaran, hampers premium, gift set custom untuk perusahaan & personal. Packaging eksklusif, pengiriman cepat ke seluruh Malang Raya.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta property="og:title" content="Vendor Hampers Malang - Parcel & Gift Set Premium">
     <meta property="og:description"
         content="Solusi hampers & parcel premium untuk perusahaan dan personal di Malang. Packaging eksklusif, kualitas terjamin.">
-    <meta property="og:image" content="assets/hero-souvenir.png">
+    <meta property="og:image" content="assets/hero-souvenir.webp">
     <meta property="og:url" content="https://hampersmalang.web.id">
     <meta property="og:type" content="website">
 
@@ -32,7 +32,7 @@
       "@context": "https://schema.org",
       "@type": "LocalBusiness",
       "name": "PT. Maroon Digital Kreasi (Maroon Souvenir)",
-      "image": "assets/hero-souvenir.png",
+      "image": "assets/hero-souvenir.webp",
       "@id": "https://hampersmalang.web.id",
       "url": "https://hampersmalang.web.id",
       "telephone": "+62895639068080",
@@ -118,7 +118,7 @@
     <nav class="navbar">
         <div class="container nav-container">
             <a href="./" class="logo">
-                <img src="assets/logo.png" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
+                <img src="assets/logo.webp" alt="Maroon Souvenir Logo" style="height: 40px; margin-right: 0.5rem;">
                 Maroon<span style="color:var(--foreground)">Souvenir</span>
             </a>
             <div class="nav-menu">
@@ -171,7 +171,7 @@
 
             <div class="hero-image">
                 <div class="hero-bg-accent"></div>
-                <img src="assets/hero-souvenir.png" alt="Paket Souvenir Kantor Eksklusif Maroon Souvenir">
+                <img src="assets/hero-souvenir.webp" alt="Paket Souvenir Kantor Eksklusif Maroon Souvenir">
 
                 <!-- Floating Elements (Decoration) -->
                 <div class="hero-float-badge"
@@ -238,7 +238,7 @@
                 </div>
             </div>
             <div style="position: relative;">
-                <img src="assets/corporate-gift.png" alt="Tim Maroon Souvenir" class="blob-shape"
+                <img src="assets/corporate-gift.webp" alt="Tim Maroon Souvenir" class="blob-shape"
                     style="border: 2px solid #1E293B; box-shadow: 8px 8px 0px #1E293B; background: white;">
                 <!-- Sticker element -->
                 <div class="about-sticker"
@@ -264,7 +264,7 @@
                 <!-- Item 1: corporate Gift -->
                 <a href="products#executive" class="card gallery-item"
                     style="padding: 0; overflow: hidden; height: 300px; position: relative; display: block; border: none;">
-                    <img src="assets/corporate-gift.png" alt="Corporate Gift Eksklusif"
+                    <img src="assets/corporate-gift.webp" alt="Corporate Gift Eksklusif"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.5s;"
                         loading="lazy">
                     <div class="gallery-overlay">
@@ -276,7 +276,7 @@
                 <!-- Item 2: Seminar Kit -->
                 <a href="category-seminar" class="card gallery-item"
                     style="padding: 0; overflow: hidden; height: 300px; position: relative; display: block; border: none;">
-                    <img src="assets/seminar-kit.png" alt="Paket Seminar Kit Lengkap"
+                    <img src="assets/seminar-kit.webp" alt="Paket Seminar Kit Lengkap"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.5s;"
                         loading="lazy">
                     <div class="gallery-overlay">
@@ -288,7 +288,7 @@
                 <!-- Item 3: Gadget & Tech (NEW PAGE) -->
                 <a href="category-gadget" class="card gallery-item"
                     style="padding: 0; overflow: hidden; height: 300px; position: relative; display: block; border: none;">
-                    <img src="assets/cat-tech.png" alt="Souvenir Gadget Teknologi"
+                    <img src="assets/cat-tech.webp" alt="Souvenir Gadget Teknologi"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.5s;"
                         loading="lazy">
                     <div class="gallery-overlay">
@@ -300,7 +300,7 @@
                 <!-- Item 4: Lifestyle & Apparel (NEW PAGE) -->
                 <a href="category-lifestyle" class="card gallery-item"
                     style="padding: 0; overflow: hidden; height: 300px; position: relative; display: block; border: none;">
-                    <img src="assets/cat-lifestyle.png" alt="Souvenir Lifestyle Apparel"
+                    <img src="assets/cat-lifestyle.webp" alt="Souvenir Lifestyle Apparel"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.5s;"
                         loading="lazy">
                     <div class="gallery-overlay">
@@ -312,7 +312,7 @@
                 <!-- Item 5: Eco-Green -->
                 <a href="category-eco" class="card gallery-item"
                     style="padding: 0; overflow: hidden; height: 300px; position: relative; display: block; border: none;">
-                    <img src="assets/cat-eco.png" alt="Souvenir Ramah Lingkungan"
+                    <img src="assets/cat-eco.webp" alt="Souvenir Ramah Lingkungan"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.5s;"
                         loading="lazy">
                     <div class="gallery-overlay">
@@ -324,7 +324,7 @@
                 <!-- Item 6: Drinkware & Tumbler (NEW PAGE) -->
                 <a href="category-drinkware" class="card gallery-item"
                     style="padding: 0; overflow: hidden; height: 300px; position: relative; display: block; border: none;">
-                    <img src="assets/cat-drinkware.png" alt="Souvenir Tumbler Drinkware"
+                    <img src="assets/cat-drinkware.webp" alt="Souvenir Tumbler Drinkware"
                         style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.5s;"
                         loading="lazy">
                     <div class="gallery-overlay">
@@ -402,7 +402,7 @@
                 <!-- Product 1 -->
                 <article class="card" style="padding: 0;">
                     <div style="height: 250px; overflow: hidden; border-bottom: 2px solid #1E293B;">
-                        <img src="assets/tumbler.png" alt="Tumbler Stainless Custom Logo"
+                        <img src="assets/tumbler.webp" alt="Tumbler Stainless Custom Logo"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -426,7 +426,7 @@
                 <!-- Product 2 -->
                 <article class="card" style="padding: 0;">
                     <div style="height: 250px; overflow: hidden; border-bottom: 2px solid #1E293B;">
-                        <img src="assets/seminar-kit.png" alt="Paket Seminar Kit Murah"
+                        <img src="assets/seminar-kit.webp" alt="Paket Seminar Kit Murah"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -449,7 +449,7 @@
                 <!-- Product 3 -->
                 <article class="card" style="padding: 0;">
                     <div style="height: 250px; overflow: hidden; border-bottom: 2px solid #1E293B;">
-                        <img src="assets/corporate-gift.png" alt="Premium Gift Set Box"
+                        <img src="assets/corporate-gift.webp" alt="Premium Gift Set Box"
                             style="width: 100%; height: 100%; object-fit: cover;">
                     </div>
                     <div style="padding: 1.5rem;">
@@ -521,7 +521,7 @@
                     style="border: none; box-shadow: none; padding: 0; overflow: hidden;">
                     <div
                         style="height: 200px; overflow: hidden; border-radius: var(--radius-md); border: 2px solid #1E293B; margin-bottom: 1rem;">
-                        <img src="assets/cat-executive.png" alt="Souvenir Kantor Unik"
+                        <img src="assets/cat-executive.webp" alt="Souvenir Kantor Unik"
                             style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.5s;"
                             class="hover-zoom">
                     </div>
@@ -535,7 +535,7 @@
                     style="border: none; box-shadow: none; padding: 0; overflow: hidden;">
                     <div
                         style="height: 200px; overflow: hidden; border-radius: var(--radius-md); border: 2px solid #1E293B; margin-bottom: 1rem;">
-                        <img src="assets/cat-drinkware.png" alt="Tumbler Asli vs Palsu"
+                        <img src="assets/cat-drinkware.webp" alt="Tumbler Asli vs Palsu"
                             style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.5s;"
                             class="hover-zoom">
                     </div>
@@ -549,7 +549,7 @@
                     style="border: none; box-shadow: none; padding: 0; overflow: hidden;">
                     <div
                         style="height: 200px; overflow: hidden; border-radius: var(--radius-md); border: 2px solid #1E293B; margin-bottom: 1rem;">
-                        <img src="assets/seminar-kit.png" alt="Tips Seminar Kit"
+                        <img src="assets/seminar-kit.webp" alt="Tips Seminar Kit"
                             style="width: 100%; height: 100%; object-fit: cover; transition: transform 0.5s;"
                             class="hover-zoom">
                     </div>
